# ChangeLog for media-fonts/arphicfonts
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/arphicfonts/ChangeLog,v 1.56 2014/01/28 06:06:27 naota Exp $

*arphicfonts-0.2.20080216.1-r1 (28 Jan 2014)

  28 Jan 2014; Naohiro Aota <naota@gentoo.org>
  +arphicfonts-0.2.20080216.1-r1.ebuild,
  +files/arphicfonts-0.2.20080216.1-fontconfig.patch:
  Add a patch to supress fontconfig warnings. #490340

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
  arphicfonts-0.2.20080216.1.ebuild:
  keyword ~amd64-fbsd

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  arphicfonts-0.2.20080216.1.ebuild:
  Transfer Prefix keywords

  20 Sep 2009; Mounir Lamouri <volkmar@gentoo.org>
  arphicfonts-0.2.20080216.1.ebuild:
  Stable for ppc. Fix bug 283909

  18 Sep 2009; Jeroen Roovers <jer@gentoo.org>
  arphicfonts-0.2.20080216.1.ebuild:
  Stable for HPPA (bug #283909).

  12 Sep 2009; Raúl Porcel <armin76@gentoo.org>
  arphicfonts-0.2.20080216.1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #283909

  11 Sep 2009; Markus Meier <maekke@gentoo.org>
  arphicfonts-0.2.20080216.1.ebuild:
  amd64/x86 stable, bug #283909

  07 Sep 2009; Ryan Hill <dirtyepic@gentoo.org>
  arphicfonts-0.2.20080216.1.ebuild:
  Don't override pkg_postinst.

  07 Sep 2009; Brent Baude <ranger@gentoo.org>
  arphicfonts-0.2.20080216.1.ebuild:
  Marking arphicfonts-0.2.20080216.1 ppc64 for bug 283909

  07 Sep 2009; Ryan Hill <dirtyepic@gentoo.org> -arphicfonts-0.1-r2.ebuild:
  Remove old.

  30 May 2008; Peter Alfredsen <loki_val@gentoo.org> ChangeLog:
  Version bump. Closes bug 220303.

  02 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> arphicfonts-0.1-r2.ebuild,
  -arphicfonts-0.1.20060513.ebuild, arphicfonts-0.1.20060928.ebuild:
  Remove old.  Fix quoting.

  28 Jul 2007; Steve Dibb <beandog@gentoo.org>
  arphicfonts-0.1.20060928.ebuild:
  amd64 stable, bug 186399

  25 Jul 2007; Jeroen Roovers <jer@gentoo.org>