@@ -2,6 +2,7 @@
 Hash: SHA256
 
 AUX arphicfonts-0.2.20080216.1-fontconfig.patch 5739 SHA256 d416f9080bf8261f94beb764ef3870787fbba89879219d5cf0baa6ff178facf4 SHA512 0c7fa9086f5ae33b9150a83a0d5620c4ea4f67d2f11fc5646640ca77f79c4fdea107e15d8a3a3cf314e399b0bcaa6baf14d4261407f2ac7217b384312f7f8516 WHIRLPOOL 1117e0b97cec3fe3b240a869fbcd52624bde46119085ff4f6925e9f3c61ab03b938d7c0ea969a8e87860baec43f087200826b95116e653dada0b3cabb2bf0c2e
+AUX arphicfonts-0.2.20080216.1.pe 119 SHA256 bec22133b7b160719c7a54edc7e8d7e384dd5f3b9e7c245f253337a4406c4d3f SHA512 28ac49dbf8ca80f91e1dda4d5a065716c2012c89ca173520a58689ec88f89222186036e1a029f195f3c3dbca011ec5e20d8f94cb5323eba7e32630597a41f1d6 WHIRLPOOL 19cf5615cfef81e399ccd97bca2b50bf5a70ae6c47ac8515c25c729712a5e199824a0860d951ba2b83a04a4c780123e8e10e733cde421ec6ff5232e59764c586
 DIST bkai00mp.ttf.gz 6013768 SHA256 7e56e73900315ac0ad3bdb7244dc20dd575ef634434b2b98bd747391528a6c45 SHA512 cec2dae60d2cea060c560587338e64e92b95e8fb7c6a4ee41946b9c578cd0dc7e457bcfa927011ca731210cad6906864bfbd5eb07acd2de317911f4ccf0646c6 WHIRLPOOL 359df6ee28a20477429bd19a971afd15083bdb7d5c2a57df98e74a7d7071854b8295837769846086c65ecc9c249e4616f86b56a2522bbd379c9ce86f2c878011
 DIST bsmi00lp.ttf.gz 5653466 SHA256 2201657f06c524111dd1f146e82460f6bdb3467fa3d5648be964a1a43921f730 SHA512 9aa360213b25780def342043f5c0d4d6c1236778488119125a9b702cf26312f9759c9bb7eb1ac93e0169cbbd26e5a8cc38970d8df538903868dec95c3692efeb WHIRLPOOL ef5bb28856665e8d9db0980ab1b801548a07ae9fe42af27feae9ba94d30a73db8c4822c55e15a3f497b7d3ffdf1bf0dfcbd3c078bf035013c563db529549972e
 DIST gbsn00lp.ttf.gz 2345803 SHA256 be0ce76952f1d090a4b65a0a0b03bcf33f1b676916389e35421eb2edbbf4c6d6 SHA512 98bd8a03c901f680edc4073aea21729e5131d15792c5c4a25590a160a4359e29414b3c2457aa85681d475ebced442d9436024a5440a0011881bd7dd07a44623d WHIRLPOOL 90436ccf384d994a7a490bca7fff41118509478aca3ee8d025156e62a556d3166cfb518129026c0fc094d377f813ad22f23646f572b8b4d58260282b67ffe4a2
@@ -12,23 +13,24 @@ DIST ttf-arphic-uming_0.1.20060928.orig.tar.gz 12671677 SHA256 410085d5f86362d00
 DIST ttf-arphic-uming_0.2.20080216.1.orig.tar.gz 10684442 SHA256 8038a6db9e832456d5da5559aff8d15130243be1091bf24f3243503a6f1bda98 SHA512 ef96969d1c5f1bda14aadfbe112a1ba30ae1bc477a89838753287ceaf07804e59c2f3f306399e9d54074be99d0c963abdb33d789f3933fdd98453a1ef7731407 WHIRLPOOL 862276fb8b661c0de9542179ce5a9f0fc9678f25ffe8b74fc2048e6445f3c41b02f35f2d478b84b05db66b8e0407f35569bd465962110c971d0d557a64c01fca
 EBUILD arphicfonts-0.1.20060928.ebuild 1165 SHA256 9dc3a2b64f5289ab1225cc75b9b0892af9966dde757606333ba252044b541b38 SHA512 e4dddba774ac21b5aaff6c28dca9d0143d9f0143016f7bd4ef43d5b11c032eb7936beb6a1219732dfc9f659b151a6908a617192a9186c267bb92e2270310b252 WHIRLPOOL 7721ec2d02dc789de7d117cd9d1ae4b2dd362fdc589893cd043a20a52573000bd644dee3e752b676c433735972253c86041ab72c9ebb232079564ddb474485bf
 EBUILD arphicfonts-0.2.20080216.1-r1.ebuild 2321 SHA256 ceb16397b7c436e157adfc2e1b6045d18b0e4308bcac3bf4a71edc789c248bfb SHA512 4dad019e3c87e4c7453abf320cef2ec960db6dfed1feb416037bbe8ce59a266809a93eceac1b64e95ba1a5ab086f64b193981367a412621be9f7aaf8e9c6e28c WHIRLPOOL b5a5e9dd124b47e6e7c97c0c55bb1a865c299c3308a9fa765f5a32a8245dbb2079c74b1fe8e51528e61d2b0787ba441ab31f1f1bf35d7a6adbd399a8b9ed4506
+EBUILD arphicfonts-0.2.20080216.1-r2.ebuild 2406 SHA256 3d12390ccee0e891f104ebd3df84c5cf8d0c8f7438d3d9edcb7a3365ee629164 SHA512 0019eb067e503246ec2900afb0d13f53b5cb8e69b430882943bd6f7453ef69dfbd1aa8fec4471fcaa3ce9f02b214c11ffb45ca37838e389fd19305d672f072f1 WHIRLPOOL 9b12ac607fa7d48d85f5f0de83fd9c6c4eabfe679a2a92c2c523870573e6ef6064f7b80b518d3e1907e1fffcd9804221bb2b9b417c234556baeaa9ef0c4beae9
 EBUILD arphicfonts-0.2.20080216.1.ebuild 2234 SHA256 4cdbfa1521221c658401b4035293eae442229ba0c5f35f8ba7c605bcac9ba5dc SHA512 c8b11c1355996ad6263a4177106a1cfaa3b84ff8f89cc7ccacb3892ba39a9ff6003f0672f7a44761f2719eb24febe66680626820503a33939cc1fc422aa3e7a8 WHIRLPOOL 697d87419092477aa741b55a0f9dab016c95d90bdd48e6619774ddfcc3554173e26bcfba3d2d2e38bb92a446f8fb8d0b7943045f465545debad546977f21bf01
-MISC ChangeLog 7874 SHA256 e54cc60685beacdf6326dacd750e1188e77632f29bb52c622e54dbdd430255cd SHA512 02109deb0f2e1b989c628ab8015f773dc75d7928d659a0399f37fc7375461a8e71d0757db9d17cc26a34ce1225627812e59d77269b52a1dff132830977db1fdd WHIRLPOOL 9c335197b3223c95486b2e1b721f09a42b17ba0a3e67ef3c7b623cec839e3c83d360bfdc953b5f31081cb16a00f29648ae47819dd602ccf85619cf6e0445437c
+MISC ChangeLog 8087 SHA256 187dd97e3534287411b938bd782ff117389c617838244d2f9fed8818ee779b5d SHA512 b5ec0c11de03d9a05bbb57559367f058f85d95686783c594487fbe6254241f6c2384fb8b3ba446d356609e501f8895c6457c1611877af03f9d4c3caa3a5efe9d WHIRLPOOL a1deaf30b1c77d9a5536d00cbe8a8db9473ad9e6d3867e1f331ed7696ebb163ca83a09cd2a62ba6a483ab5368d5a6b1f201aeb3f5df30eb029c8c808d6fa7931
 MISC metadata.xml 175 SHA256 0dc53674ee3ca2348bedd390f639dac96f537cce8cd0c550c13917de7b61f2e8 SHA512 9bbfa2407766fd81311377a806dc3c29742ec27a0525c2b974c43289209fb86be5a3e4daedc7e9e280c63f60dd32defb4f0e36551bd076e1cfcfca1e30af6fda WHIRLPOOL 1c8524c90ad09ee610dabccefe0366c4620aacddf94d1002dff2c525a19a4920060cb0c19ac42d22e8a46c9c972139c829b09feaa4b1f9721d6b90402dc4fc5e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS50j0AAoJEDYO1FT4VRUUeCcP/jkBOodYS5MU31+dDptGG7PY
-m0EH+4VH7tj3InCI3ynU54r6tYno54OQGiTZK7QV9vlN0N2z4BAKeXhk+Ozz4xoP
-ZX0ak+JHYN2A3YyIKxswfCVVUfcHBVrXOJfhzoN7PrrMLKxJ4VxC1ZzhlqR+3OmU
-W0wISC75XHTpqBhOmzp84/Q+1CjVARgQPo/oGqozeq/IElxcAN+jkZ31C6GLGfGx
-heTKSer8PrkMph6rIehJ02G1aMDcYaHdpb7hqyrIp9pLEU2u1Uooyv2mEWa2lZNm
-CAqisHgrSwHvYQjK3FhOsursFE1ekv5c/N3QoR92mX5uTa0A5sYjOaq0LKtFmo78
-RSGM50xQZOFC+dn7rneFrB8WRdhl/5a8iKa2fRKcLmMrF2uMFso3JDhlJ8s5dd+B
-1W19AcTDWgYmqU8TKi6JHKP6yefa/C6/Ug/5jSYVblE4eMBIDWIZyRZ8/sUEoQG6
-kbUSHJSgXp2CFFC9mIvbcOOkZ3ghKvFJSYrobgueSp220D1UN6cNRkYlof3c+SMk
-4oFO7TSqkzmr0mWsn+6VIVzYnU7RC65h8iD/bDJqqzoaRgnZTxOyyLBJwFdk7tcX
-wWFsyiI0AjL5AKJnm6jc7xkFRJvm7e9kF9J6bCOkZqyAYdj7l0L2kcFivPLZVDZn
-0df/FSvvpD8gQs5K+Lr+
-=ykJf
+iQIcBAEBCAAGBQJTYduNAAoJEDYO1FT4VRUUjpcP/iANJM4dplC+qJMq8ESUIEKt
+ouUKlys1AyAcE3AIlvWj7hSh3iNhjg/HMXn7xkJmFALP0regoz1kg37uUjNXXPc9
+xnHJ+dD6aPgqXS8ozXVRnaVCIOzZ4Uubj7hvXPIbIrjBkSoRXwfeUANxzzMbcPKN
+qU1g7tRLtPOGN0/q3pke7Aro7SMZ+wzxHQ1CpjkkE8srflpBx87dVyotaChlC8b4
+b4dxEbWYKUZ8iSgXBTgBIrSRjH2sJgS38ihxrxDbMZQEArEYHqVJWmJMO6ByVYL8
+hUA3n25qGMG/w72dR04mLZkHN00js/gW/hEi9VLRBrR5i4P7qJb/d0zZ5GmFp3+2
+qlBtrrR6bWHS9Hq2Yc4bSr4bQvjMeiC4FvkSw/ECI3bAIYfOrOzkOEI7xfYjFyc6
+9vuZ6jyWZ4ciZifpcaYiib3HvAiwi0DIBTOv6X+sMhPp3wsNtRP0F3DKMrzTZGgX
++ovWFpdSKWRVc+NaH3Co+FTzI/RZkpj7wbWFeNZeq9+NHAybawUn0qhzd3yuCykW
+9yhFsNcg7096kYeQV6lH4eAN1j8D/qQ+lZKF+g6KdzhtCC03oDdNn4xmEROAzN/2
+Ycp7bPQeHYSmV456PNyIsGlxPLT5w5836C8CLPy33lG72jGDrUP7s9kUsz2NIfcc
+tygFOK4JoUQU38GfedXI
+=45Wu
 -----END PGP SIGNATURE-----
