@@ -1,0 +1,13 @@
+DEFINED_PHASES=install postinst postrm prepare setup unpack
+DEPEND=media-gfx/fontforge X? ( x11-apps/mkfontdir media-fonts/encodings )
+DESCRIPTION=Chinese TrueType Arphic Fonts
+EAPI=5
+HOMEPAGE=http://www.arphic.com.tw/ http://www.freedesktop.org/wiki/Software/CJKUnifonts
+IUSE=X
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x86-macos
+LICENSE=Arphic
+RESTRICT=strip binchecks
+SLOT=0
+SRC_URI=mirror://gnu/non-gnu/chinese-fonts-truetype/gkai00mp.ttf.gz mirror://gnu/non-gnu/chinese-fonts-truetype/bkai00mp.ttf.gz mirror://gnu/non-gnu/chinese-fonts-truetype/bsmi00lp.ttf.gz mirror://gnu/non-gnu/chinese-fonts-truetype/gbsn00lp.ttf.gz mirror://ubuntu/pool/main/t/ttf-arphic-uming/ttf-arphic-uming_0.2.20080216.1.orig.tar.gz mirror://ubuntu/pool/main/t/ttf-arphic-ukai/ttf-arphic-ukai_0.2.20080216.1.orig.tar.gz
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	font	37271e0911f39dd15a28adcaf94f6956	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=b216366f478c5f4247269dce4efabec8
